syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_relation_udfs_user;

message DsRelationUdfsUserBean {

     int32 id=1 ;
     int32 user_id=2 ;
     optional int32 udf_id=3 ;
     optional int32  perm=4 ;
     optional string create_time=5 ;
     optional string update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationUdfsUserBeanService {
  rpc ListDsRelationUdfsUserBeans(ListDsRelationUdfsUserBeansRequest) returns (ListDsRelationUdfsUserBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationUdfsUserBeans"
    };
  }

  rpc GetDsRelationUdfsUserBean(GetDsRelationUdfsUserBeanRequest) returns (DsRelationUdfsUserBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationUdfsUserBeans/*}"
    };
  }

  rpc CreateDsRelationUdfsUserBean(CreateDsRelationUdfsUserBeanRequest) returns (DsRelationUdfsUserBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationUdfsUserBeans"
      body: "DsRelationUdfsUserBean"
    };
  }

  rpc UpdateDsRelationUdfsUserBean(UpdateDsRelationUdfsUserBeanRequest) returns (DsRelationUdfsUserBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationUdfsUserBean.name=DsRelationUdfsUserBeans/*}"
      body: "DsRelationUdfsUserBean"
    };
  }

  rpc DeleteDsRelationUdfsUserBean(DeleteDsRelationUdfsUserBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationUdfsUserBeans/*}"
    };
  }
}

// message DsRelationUdfsUserBean {
// ! This should be defined elsewhere
// }

message ListDsRelationUdfsUserBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationUdfsUserBeansResponse {
  // The field name should match the noun "DsRelationUdfsUserBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationUdfsUserBean DsRelationUdfsUserBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationUdfsUserBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationUdfsUserBeanRequest {
  // The parent resource name where the DsRelationUdfsUserBean is to be created.
  string parent = 1;

  // The DsRelationUdfsUserBean id to use for this DsRelationUdfsUserBean.
  string DsRelationUdfsUserBean_id = 2;

  // The DsRelationUdfsUserBean resource to create.
  // The field name should match the Noun in the method name.
  DsRelationUdfsUserBean DsRelationUdfsUserBean = 3;
}

message UpdateDsRelationUdfsUserBeanRequest {
  // The DsRelationUdfsUserBean resource which replaces the resource on the server.
  DsRelationUdfsUserBean DsRelationUdfsUserBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationUdfsUserBeanRequest {
  // The resource name of the DsRelationUdfsUserBean to be deleted.
  string name = 1;
}
